# dbc-data

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile
dbc-data-derive/: Cargo.toml
dbc-data-derive/src/: lib.rs
src/: derive.rs  lib.rs  message.rs  signal.rs
tests/: example.dbc  incomplete.dbc  test.dbc  test.rs
