[package]
name = "dbc-data"
version = "0.1.6"
edition = "2021"
authors = ["Michael Fairman <mfairman@tegimeki.com>"]
readme = "README.md"
description = "Derive macro for CAN DBC code generation"
repository = "https://gitlab.com/mfairman/dbc-data"
keywords = ["can", "automotive", "ecu", "no-std"]
license = "MIT"


[lib]
proc-macro = true

[dev-dependencies]
assert_hex = "0.4.1"
assert-eq-float = "0.1.4"

[dependencies]
can-dbc = "6.0.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
